deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cfdi
  name: cfdi
  namespace: default
spec:
  selector:
    matchLabels:
      app: cfdi
  replicas: 1
  template:
    metadata:
      labels:
        app: cfdi
    spec:
      containers:
      - image: karlomendozaarmory/digital-cfdi:5
        name: cfdi
        ports:
        - containerPort: 8080
          name: http
---
apiVersion: v1
kind: Service
metadata:
  name: cfdi
  namespace: default
  labels:
    service: cfdi
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    app: cfdi
